--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="caregivers" />
     <title>caregivers international</title>
+    <meta name="title" content="caregivers international" />
+    <link rel="apple-touch-icon" href="/src/public/favicon-32x32.png" type="image/png" />
+
+    <!-- Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="www.caregiversinternationalinc.org" />
+    <meta property="og:title" content="caregiversinternationalinc" />
+    <meta property="og:description" content="caregiving business" />
+    <meta property="og:image" content="/src/favicon-32x32.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:url" content="www.caregiversinternationalinc.org" />
+    <meta property="twitter:title" content="caregiversinternationalinc" />
+    <meta property="twitter:description" content="caregiving business" />
+    <meta property="twitter:image" content="/src/favicon-32x32.png" />
   </head>
   <body>
     <div id="root"></div>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
