docs: change meta tags

--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <meta name="description" content="caregivers" />
     <title>caregivers international</title>
     <meta name="title" content="caregivers international" />
-    <link rel="apple-touch-icon" href="/src/public/favicon-32x32.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/src/favicon-32x32.png" type="image/png" />
 
-    <!-- Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="www.caregiversinternationalinc.org" />
-    <meta property="og:title" content="caregiversinternationalinc" />
-    <meta property="og:description" content="caregiving business" />
+    <meta property="og:title" content="Family Driven Caregiving Company" />
+    <meta property="og:description" content="Family Driven Caregiving Company" />
     <meta property="og:image" content="/src/favicon-32x32.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content="www.caregiversinternationalinc.org" />
-    <meta property="twitter:title" content="caregiversinternationalinc" />
-    <meta property="twitter:description" content="caregiving business" />
+    <meta property="twitter:title" content="Family Driven Caregiving Company" />
+    <meta property="twitter:description" content="Family Driven Caregiving Company" />
     <meta property="twitter:image" content="/src/favicon-32x32.png" />
   </head>
   <body>
